infra/k8s/auth-mongo.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-hub-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-hub-auth
  template:
    metadata:
      labels:
        app: ticket-hub-auth
    spec:
      containers:
      - name: auth
        image: erfanseidipoor/ticket-hub-auth
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-hub-auth-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: ticket-hub-auth
  ports:
  - name: auth
    protocol: TCP
    port: 1000
    targetPort: 1000

---

apiVersion: v1
kind: Service
metadata:
  name: ticket-hub-auth-mongodb
spec:
  selector:
    app: ticket-hub-auth-mongodb
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-hub-auth-mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-hub-auth-mongodb
  template:
    metadata:
      labels:
        app: ticket-hub-auth-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data-pvc
