infra/k8s/auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-hub-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-hub-auth
  template:
    metadata:
      labels:
        app: ticket-hub-auth
    spec:
      containers:
      - name: auth
        image: erfanseidipoor/ticket-hub-auth
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-hub-auth-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: ticket-hub-auth
  ports:
  - name: auth
    protocol: TCP
    port: 1000
    targetPort: 1000
